--- a/train_full_mc.ipynb
+++ b/train_full_mc.ipynb
@@ -50,12 +50,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = Path(\"out\") / f\"hypernet.p\"\n",
+    "ckpt_path = Path(\"out\") / f\"vae.p\"\n",
     "ckpt = pickle.load(open(ckpt_path, \"rb\"))\n",
     "\n",
-    "LOSS = ckpt[\"LOSS\"]\n",
     "cfg = ckpt[\"cfg\"]\n",
-    "params_enc, params_proj, params_ss = ckpt[\"params\"]\n",
+    "params_enc = ckpt[\"params_enc\"]\n",
+    "params_ss = ckpt[\"params_dec\"] \n",
+    "params_proj = ckpt[\"params_proj\"]\n",
+    "sigma_noise = ckpt[\"sigma_noise\"]\n",
     "scalers = ckpt[\"scalers\"]\n",
     "params_dec_flat, unflatten_dec = jax.flatten_util.ravel_pytree(params_ss)\n",
     "n_params = params_dec_flat.shape[0]"
@@ -68,6 +70,7 @@
    "outputs": [],
    "source": [
     "train_lens = [100, 200, 300, 400, 500, 600, 700, 800, 900, 1_000, 2000, 3000, 4000, 5000]\n",
+    "#train_lens = [100, 200]\n",
     "mc_size = 100"
    ]
   },
@@ -95,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enc = Encoder(mlp_layers=[cfg.nh, cfg.nz], rnn_size=cfg.nh)\n",
-    "proj = Projector(outputs=n_params,  unflatten=unflatten_dec)"
+    "proj = Projector(outputs=n_params, unflatten=unflatten_dec)\n",
+    "enc = Encoder(mlp_layers=[cfg.nh, cfg.nz], rnn_size=cfg.nh)"
    ]
   },
   {
@@ -105,24 +108,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loss_reduced(ov, y, u):\n",
-    "    \n",
-    "    # Project the latent into parameters of the decoder\n",
-    "    pe = proj.apply(params_proj, ov[\"z\"])\n",
-    "\n",
-    "    # Use in the decoder output to define/update the model parameters\n",
-    "    pa = jax.tree.map(lambda x, y: x+y, params_ss, pe)\n",
-    "    \n",
-    "    y_hat = ss_apply(pa, scalers, ov[\"x0\"], u)\n",
+    "def loss_full(ov, y, u):\n",
+    "       \n",
+    "    y_hat = ss_apply(ov[\"params\"], scalers, ov[\"x0\"], u)\n",
     "    #scaled_err = (y1 - y1_hat) / ckpt[\"sigma_noise\"]\n",
     "    #loss = jnp.sum(scaled_err**2) + jnp.sum(ov[\"z\"]**2)\n",
     "    loss = jnp.mean((y - y_hat)**2)\n",
     "    return loss\n",
     "\n",
     "\n",
-    "def train_reduced(ov, y, u, iters=10_000, lr=1e-3):\n",
-    "\n",
-    "        loss_cfg = partial(loss_reduced, y=y, u=u)\n",
+    "def train_full(ov, y, u, iters=100_000, lr=1e-3):\n",
+    "        loss_cfg = partial(loss_full, y=y, u=u)\n",
     "        opt = optax.adamw(learning_rate=lr)\n",
     "        state = train_state.TrainState.create(apply_fn=loss_cfg, params=ov, tx=opt)\n",
     "\n",
@@ -138,8 +134,7 @@
     "                losses = losses.at[idx].set(loss)\n",
     "                #pbar.set_postfix_str(loss.item())\n",
     "\n",
-    "        return state.params, jnp.array(losses)\n",
-    "\n"
+    "        return state.params, jnp.array(losses)"
    ]
   },
   {
@@ -148,6 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fit_adam = onp.empty((len(train_lens), mc_size))\n",
+    "fit_bfgs = onp.empty((len(train_lens), mc_size))\n",
     "fit_red = onp.empty((len(train_lens), mc_size))"
    ]
   },
@@ -169,23 +166,41 @@
     "    mc_indexes = start_indexes[:, None] + jnp.arange(train_len)\n",
     "    mc_y, mc_u = y_train[mc_indexes], u_train[mc_indexes]\n",
     "\n",
-    "    print(f\"Training {mc_size} reduced models...\")\n",
-    "    # train reduced models\n",
-    "    z_init = jnp.zeros((mc_size, cfg.nz, ))\n",
-    "    z_init = jax.vmap(enc.apply, in_axes=(None, 0, 0))(params_enc, mc_y, mc_u)\n",
-    "    opt_vars_red_init = {\"z\": z_init, \"x0\": jnp.zeros((mc_size, cfg.nx, ))}\n",
-    "    opt_vars_red, losses_red = jax.vmap(train_reduced, in_axes=(0, 0, 0))(opt_vars_red_init, mc_y, mc_u)\n",
+    "    # train adam models\n",
+    "    print(f\"Training  {mc_size} full models with ADAM...\")\n",
+    "    key, subkey = jr.split(key)\n",
+    "    keys_init = jr.split(subkey, mc_size)\n",
+    "    params_init = jax.vmap(ss_init)(keys_init)\n",
+    "    opt_vars_init = {\"params\": params_init, \n",
+    "                        \"x0\": jnp.zeros((mc_size, cfg.nx))}\n",
+    "    opt_vars_adam, losses_full_adam = jax.vmap(train_full, in_axes=(0, 0, 0))(opt_vars_init, mc_y, mc_u)\n",
     "\n",
-    "    # project trained zetas to the ss parameter space\n",
-    "    params_ss_proj = jax.vmap(proj.apply, in_axes=(None, 0))(params_proj, opt_vars_red[\"z\"])\n",
-    "    params_red = jax.tree.map(lambda x, y: x+y, params_ss, params_ss_proj)\n",
-    "\n",
-    "    # test reduced models\n",
+    "    # test adam models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
-    "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(params_red, scalers, x0, u_test)\n",
-    "\n",
+    "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(opt_vars_adam[\"params\"], scalers, x0, u_test)\n",
     "    for mc_idx in range(mc_size):\n",
-    "        fit_red[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]"
+    "        fit_adam[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]\n",
+    "\n",
+    "    # train bfgs models\n",
+    "    opt_vars_bfgs = []\n",
+    "    states_bfgs = []\n",
+    "    for mc_idx in range(mc_size):\n",
+    "        print(f\"Training model {mc_idx} with BFGS...\")\n",
+    "        loss_i = partial(loss_full, y=mc_y[mc_idx], u=mc_u[mc_idx])\n",
+    "        solver = jaxopt.ScipyMinimize(fun=loss_i, tol=1e-6, method=\"BFGS\", maxiter=10_000)\n",
+    "        ov_adam_i = jax.tree.map(lambda x: x[mc_idx], opt_vars_adam)\n",
+    "        ov_bfgs, s_bfgs = solver.run(ov_adam_i)\n",
+    "        opt_vars_bfgs.append(ov_bfgs)\n",
+    "        states_bfgs.append(s_bfgs)\n",
+    "\n",
+    "    opt_vars_bfgs = jax.tree.map(lambda *x: jnp.stack(x), *opt_vars_bfgs)\n",
+    "    states_bfgs = jax.tree.map(lambda *x: jnp.stack(x), *states_bfgs)\n",
+    "\n",
+    "    # test bfgs models\n",
+    "    x0 = jnp.zeros((cfg.nx, ))\n",
+    "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(opt_vars_bfgs[\"params\"], scalers, x0, u_test)\n",
+    "    for mc_idx in range(mc_size):\n",
+    "        fit_bfgs[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]"
    ]
   },
   {
@@ -194,11 +209,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = pd.DataFrame(fit_red.T, columns=[str(l) for l in train_lens])\n",
-    "df_all = df_all.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_all.insert(0, \"model\", \"reduced (hypernet)\")\n",
+    "df_adam = pd.DataFrame(fit_adam.T, columns=[str(l) for l in train_lens])\n",
+    "df_adam = df_adam.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_adam.insert(0, \"model\", \"full (adam)\")\n",
     "\n",
-    "df_all.to_pickle(Path(\"out\") / \"df_mc_hypernet.pkl\")"
+    "df_bfgs = pd.DataFrame(fit_bfgs.T, columns=[str(l) for l in train_lens])\n",
+    "df_bfgs = df_bfgs.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_bfgs.insert(0, \"model\", \"full (bfgs)\")\n",
+    "\n",
+    "df_all = pd.concat((df_adam, df_bfgs), ignore_index=True)\n",
+    "df_all.to_pickle(Path(\"out\") / \"df_mc_full.pkl\")"
    ]
   }
  ],
