minor changes, added linear identification

--- a/train_full_mc.ipynb
+++ b/train_full_mc.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from functools import partial\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
@@ -109,7 +110,6 @@
    "outputs": [],
    "source": [
     "def loss_full(ov, y, u):\n",
-    "       \n",
     "    y_hat = ss_apply(ov[\"params\"], scalers, ov[\"x0\"], u)\n",
     "    #scaled_err = (y1 - y1_hat) / ckpt[\"sigma_noise\"]\n",
     "    #loss = jnp.sum(scaled_err**2) + jnp.sum(ov[\"z\"]**2)\n",
@@ -117,7 +117,7 @@
     "    return loss\n",
     "\n",
     "\n",
-    "def train_full(ov, y, u, iters=100_000, lr=1e-3):\n",
+    "def train_full(ov, y, u, iters=10_000, lr=1e-3):\n",
     "        loss_cfg = partial(loss_full, y=y, u=u)\n",
     "        opt = optax.adamw(learning_rate=lr)\n",
     "        state = train_state.TrainState.create(apply_fn=loss_cfg, params=ov, tx=opt)\n",
@@ -145,7 +145,9 @@
    "source": [
     "fit_adam = onp.empty((len(train_lens), mc_size))\n",
     "fit_bfgs = onp.empty((len(train_lens), mc_size))\n",
-    "fit_red = onp.empty((len(train_lens), mc_size))"
+    "fit_red = onp.empty((len(train_lens), mc_size))\n",
+    "train_time_adam = onp.empty(len(train_lens))\n",
+    "train_time = onp.empty(len(train_lens))"
    ]
   },
   {
@@ -166,6 +168,7 @@
     "    mc_indexes = start_indexes[:, None] + jnp.arange(train_len)\n",
     "    mc_y, mc_u = y_train[mc_indexes], u_train[mc_indexes]\n",
     "\n",
+    "    time_start = time.time()\n",
     "    # train adam models\n",
     "    print(f\"Training  {mc_size} full models with ADAM...\")\n",
     "    key, subkey = jr.split(key)\n",
@@ -174,6 +177,7 @@
     "    opt_vars_init = {\"params\": params_init, \n",
     "                        \"x0\": jnp.zeros((mc_size, cfg.nx))}\n",
     "    opt_vars_adam, losses_full_adam = jax.vmap(train_full, in_axes=(0, 0, 0))(opt_vars_init, mc_y, mc_u)\n",
+    "    train_time_adam[len_idx] = time.time() - time_start\n",
     "\n",
     "    # test adam models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
@@ -191,10 +195,11 @@
     "        ov_adam_i = jax.tree.map(lambda x: x[mc_idx], opt_vars_adam)\n",
     "        ov_bfgs, s_bfgs = solver.run(ov_adam_i)\n",
     "        opt_vars_bfgs.append(ov_bfgs)\n",
-    "        states_bfgs.append(s_bfgs)\n",
-    "\n",
+    "        states_bfgs.append(s_bfgs)    \n",
     "    opt_vars_bfgs = jax.tree.map(lambda *x: jnp.stack(x), *opt_vars_bfgs)\n",
     "    states_bfgs = jax.tree.map(lambda *x: jnp.stack(x), *states_bfgs)\n",
+    "\n",
+    "    train_time[len_idx] = time.time() - time_start\n",
     "\n",
     "    # test bfgs models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
