--- a/train_full_alldata.ipynb
+++ b/train_full_alldata.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "from functools import partial\n",
     "from pathlib import Path\n",
+    "import time\n",
     "import pickle\n",
     "from tqdm import tqdm\n",
     "from argparse import Namespace\n",
@@ -200,7 +201,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_vars_adam, losses_adam = train_full_model(opt_vars_init, y=y1.astype(dtype_adam), u=u1.astype(dtype_adam), iters=100_000, lr=1e-3)"
+    "time_start = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_vars_adam, losses_adam = train_full_model(opt_vars_init, y=y1.astype(dtype_adam), u=u1.astype(dtype_adam), iters=40_000, lr=1e-3)\n",
+    "tima_adam = time.time() - time_start\n",
+    "print(f\"Adam took {tima_adam:.2f} seconds\")"
    ]
   },
   {
@@ -215,8 +227,17 @@
     "solver = jaxopt.ScipyMinimize(\n",
     "    fun=loss_bfgs, tol=1e-6, method=\"BFGS\", maxiter=10_000, options=options)\n",
     "\n",
-    "opt_vars_bfgs, state_full_bfgs = solver.run(opt_vars_adam)\n",
-    "state_full_bfgs.fun_val"
+    "opt_vars_bfgs, state_full_bfgs = solver.run(opt_vars_adam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_time = time.time() - time_start\n",
+    "print(f\"Training time: {train_time:.2f} s\")"
    ]
   },
   {
@@ -245,7 +266,9 @@
    "source": [
     "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])\n",
     "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])*7e-4 * 1e5\n",
-    "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))"
+    "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))\n",
+    "print(f\"Fit index: {fit_full[0]:.2f} %\")\n",
+    "print(f\"RMSE: {rmse_full[0]:.2f}e-5\")"
    ]
   },
   {
@@ -286,7 +309,12 @@
     "\n",
     "ckpt = {\n",
     "    \"H\": H,\n",
-    "    \"opt_vars_bfgs\": opt_vars_bfgs,\n",
+    "    \"params\": opt_vars_bfgs[\"params\"],\n",
+    "    \"x0\": opt_vars_bfgs[\"x0\"],\n",
+    "    \"cfg\": cfg,\n",
+    "    \"scalers\": scalers,\n",
+    "    \"train_time_adam\": tima_adam,\n",
+    "    \"train_time\": train_time,\n",
     "}\n",
     "\n",
     "pickle.dump(ckpt, open(filename, \"wb\" ))"
