added analysis script

--- a/test_full_alldata.ipynb
+++ b/test_full_alldata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nin = 10 # state_initialization_window_length variable in the NonlinearBenchmarks jargon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder = \"bwdataset\"\n",
     "data_folder = Path(data_folder)\n",
     "\n",
-    "u2 = scipy.io.loadmat(data_folder / \"uval_multisine.mat\")[\"uval_multisine\"].reshape(-1, 1)\n",
-    "y2 = scipy.io.loadmat(data_folder / \"yval_multisine.mat\")[\"yval_multisine\"].reshape(-1, 1)\n",
+    "u_test = scipy.io.loadmat(data_folder / \"uval_multisine.mat\")[\"uval_multisine\"].reshape(-1, 1)\n",
+    "y_test = scipy.io.loadmat(data_folder / \"yval_multisine.mat\")[\"yval_multisine\"].reshape(-1, 1)\n",
     "\n",
-    "u2 = u2 / 50.0\n",
-    "y2 = y2 / 7e-4"
+    "u_test = u_test / 50.0\n",
+    "y_test = y_test / 7e-4\n",
+    "t_test = onp.arange(0, len(u_test)) / 750 "
    ]
   },
   {
@@ -100,15 +110,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0 = jnp.zeros((cfg.nx, ))\n",
-    "y2_hat = ss_apply(ckpt[\"params\"], scalers, x0, u2)\n",
+    "# Train the initial system state x0 in the first samples of the test set\n",
+    "\n",
+    "import optax\n",
+    "from flax.training import train_state\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "x0_opt = jnp.zeros((cfg.nx, ))\n",
+    "\n",
+    "def loss_state(x0):\n",
+    "    y_hat = ss_apply(ckpt[\"params\"], scalers, x0, u_test[:nin, :])\n",
+    "    loss = jnp.mean((y_test[:nin] - y_hat)**2)\n",
+    "    return loss\n",
+    "\n",
+    "def train_x0(x0_opt, iters=100, lr=1e-2):\n",
+    "\n",
+    "        opt = optax.adamw(learning_rate=lr)\n",
+    "        state = train_state.TrainState.create(apply_fn=loss_state, params=x0_opt, tx=opt)\n",
+    "\n",
+    "        @jax.jit\n",
+    "        def make_step(state):\n",
+    "                loss, grads = jax.value_and_grad(state.apply_fn)(state.params)\n",
+    "                state = state.apply_gradients(grads=grads)\n",
+    "                return loss, state\n",
+    "        \n",
+    "        losses = jnp.empty(iters)\n",
+    "        for idx in (pbar := tqdm(range(iters))):\n",
+    "                loss, state = make_step(state)\n",
+    "                losses = losses.at[idx].set(loss)\n",
+    "                pbar.set_postfix_str(loss.item())\n",
+    "\n",
+    "        return state.params, jnp.array(losses)\n",
+    "\n",
+    "x0_opt, _ = train_x0(x0_opt, iters=1000, lr=1e-2)\n",
+    "#loss_state(x0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#x0 = jnp.zeros((cfg.nx, ))\n",
+    "x0 = x0_opt\n",
+    "y_hat = ss_apply(ckpt[\"params\"], scalers, x0, u_test)\n",
     "#y2_hat = ss_apply(opt_vars_adam[\"params\"], scalers, x0, u2)\n",
     "plt.figure()\n",
-    "plt.plot(y2, \"k\", label=\"true\")\n",
-    "plt.plot(y2_hat, \"b\", label=\"reconstructed\")\n",
-    "plt.plot(y2 - y2_hat, \"r\", label=\"reconstruction error\")\n",
-    "plt.axvline(cfg.skip_loss, color=\"k\")\n",
-    "plt.ylim([-4, 4]);"
+    "plt.plot(t_test, y_test, \"k\", label=\"true\")\n",
+    "plt.plot(t_test, y_hat, \"b\", label=\"reconstructed\")\n",
+    "plt.plot(t_test, y_test - y_hat, \"r\", label=\"reconstruction error\")\n",
+    "plt.xlabel(\"time (s)\")\n",
+    "#plt.axvline(cfg.skip_loss, color=\"k\")\n",
+    "plt.ylim([-4, 4])\n",
+    "plt.xlim([5, 6])\n",
+    "plt.legend(loc=\"upper right\")\n",
+    "plt.savefig(Path(\"fig\") / \"full_order_prediction.pdf\")"
    ]
   },
   {
@@ -117,16 +174,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])\n",
-    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])*7e-4 * 1e5\n",
+    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test, y_hat)\n",
+    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test, y_hat)*7e-4 * 1e6\n",
     "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))\n",
     "print(f\"Fit index: {fit_full[0]:.2f} %\")\n",
-    "print(f\"RMSE: {rmse_full[0]:.2f}e-5\")"
+    "print(f\"RMSE: {rmse_full[0]:.2f}e-6\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +206,7 @@
     "plt.xlabel(\"Eigenvalue index\")\n",
     "plt.ylabel(\"Eigenvalue\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"hessian_eigenvalues.pdf\")\n"
+    "plt.savefig(Path(\"fig\") / \"hessian_eigenvalues.pdf\")\n"
    ]
   }
  ],
