--- a/train_full_mc.ipynb
+++ b/train_full_mc.ipynb
@@ -117,7 +117,7 @@
     "    return loss\n",
     "\n",
     "\n",
-    "def train_full(ov, y, u, iters=10_000, lr=1e-3):\n",
+    "def train_full(ov, y, u, iters=40_000, lr=1e-3):\n",
     "        loss_cfg = partial(loss_full, y=y, u=u)\n",
     "        opt = optax.adamw(learning_rate=lr)\n",
     "        state = train_state.TrainState.create(apply_fn=loss_cfg, params=ov, tx=opt)\n",
@@ -223,7 +223,10 @@
     "df_bfgs.insert(0, \"model\", \"full (bfgs)\")\n",
     "\n",
     "df_all = pd.concat((df_adam, df_bfgs), ignore_index=True)\n",
-    "df_all.to_pickle(Path(\"out\") / \"df_mc_full.pkl\")"
+    "df_all.to_pickle(Path(\"out\") / \"df_mc_full.pkl\")\n",
+    "\n",
+    "df_time = pd.DataFrame({\"length\": train_lens, \"time_adam\": train_time_adam, \"time\": train_time})\n",
+    "df_time.to_pickle(Path(\"out\") / \"df_mc_full_time.pkl\")"
    ]
   }
  ],
