Update README and Jupyter notebooks for clarity and functionality improvements

--- a/train_full_mc.ipynb
+++ b/train_full_mc.ipynb
@@ -51,14 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = Path(\"out\") / f\"vae.p\"\n",
+    "ckpt_path = Path(\"out\") / f\"hypernet.p\"\n",
     "ckpt = pickle.load(open(ckpt_path, \"rb\"))\n",
     "\n",
     "cfg = ckpt[\"cfg\"]\n",
-    "params_enc = ckpt[\"params_enc\"]\n",
-    "params_ss = ckpt[\"params_dec\"] \n",
-    "params_proj = ckpt[\"params_proj\"]\n",
-    "sigma_noise = ckpt[\"sigma_noise\"]\n",
+    "params_enc, params_proj, params_ss = ckpt[\"params\"]\n",
     "scalers = ckpt[\"scalers\"]\n",
     "params_dec_flat, unflatten_dec = jax.flatten_util.ravel_pytree(params_ss)\n",
     "n_params = params_dec_flat.shape[0]"
@@ -99,8 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proj = Projector(outputs=n_params, unflatten=unflatten_dec)\n",
-    "enc = Encoder(mlp_layers=[cfg.nh, cfg.nz], rnn_size=cfg.nh)"
+    "# proj = Projector(outputs=n_params, unflatten=unflatten_dec)\n",
+    "# enc = Encoder(mlp_layers=[cfg.nh, cfg.nz], rnn_size=cfg.nh)"
    ]
   },
   {
@@ -117,7 +114,7 @@
     "    return loss\n",
     "\n",
     "\n",
-    "def train_full(ov, y, u, iters=40_000, lr=1e-3):\n",
+    "def train_full(ov, y, u, iters=200_000, lr=1e-3):\n",
     "        loss_cfg = partial(loss_full, y=y, u=u)\n",
     "        opt = optax.adamw(learning_rate=lr)\n",
     "        state = train_state.TrainState.create(apply_fn=loss_cfg, params=ov, tx=opt)\n",
@@ -145,7 +142,8 @@
    "source": [
     "fit_adam = onp.empty((len(train_lens), mc_size))\n",
     "fit_bfgs = onp.empty((len(train_lens), mc_size))\n",
-    "fit_red = onp.empty((len(train_lens), mc_size))\n",
+    "fit_adam_tr = onp.empty((len(train_lens), mc_size))\n",
+    "fit_bfgs_tr = onp.empty((len(train_lens), mc_size))\n",
     "train_time_adam = onp.empty(len(train_lens))\n",
     "train_time = onp.empty(len(train_lens))"
    ]
@@ -182,8 +180,10 @@
     "    # test adam models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
     "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(opt_vars_adam[\"params\"], scalers, x0, u_test)\n",
+    "    y_train_hat = jax.vmap(ss_apply, in_axes=(0, None, 0, 0))(opt_vars_adam[\"params\"], scalers, opt_vars_adam[\"x0\"], mc_u)\n",
     "    for mc_idx in range(mc_size):\n",
     "        fit_adam[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]\n",
+    "        fit_adam_tr[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(mc_y[mc_idx, :], y_train_hat[mc_idx, :])[0]\n",
     "\n",
     "    # train bfgs models\n",
     "    opt_vars_bfgs = []\n",
@@ -204,8 +204,10 @@
     "    # test bfgs models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
     "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(opt_vars_bfgs[\"params\"], scalers, x0, u_test)\n",
+    "    y_train_hat = jax.vmap(ss_apply, in_axes=(0, None, 0, 0))(opt_vars_bfgs[\"params\"], scalers, opt_vars_bfgs[\"x0\"], mc_u)\n",
     "    for mc_idx in range(mc_size):\n",
-    "        fit_bfgs[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]"
+    "        fit_bfgs[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y_test_hat[mc_idx, cfg.skip_loss:])[0]\n",
+    "        fit_bfgs_tr[len_idx, mc_idx] = nonlinear_benchmarks.error_metrics.fit_index(mc_y[mc_idx, :], y_train_hat[mc_idx, :])[0]"
    ]
   },
   {
@@ -214,19 +216,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_adam = pd.DataFrame(fit_adam.T, columns=[str(l) for l in train_lens])\n",
-    "df_adam = df_adam.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_adam.insert(0, \"model\", \"full (adam)\")\n",
+    "# fit = onp.copy(fit_bfgs)\n",
+    "# mask = fit_adam_tr > fit_bfgs_tr\n",
+    "# fit[mask] = fit_adam[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the final checkpoint\n",
+    "ckpt = {\n",
+    "    \"train_lens\": train_lens,\n",
+    "    \"train_time_adam\": train_time_adam,\n",
+    "    \"train_time\": train_time,\n",
+    "    \"fit_adam\": fit_adam,\n",
+    "    \"fit_bfgs\": fit_bfgs,\n",
+    "}\n",
     "\n",
-    "df_bfgs = pd.DataFrame(fit_bfgs.T, columns=[str(l) for l in train_lens])\n",
-    "df_bfgs = df_bfgs.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_bfgs.insert(0, \"model\", \"full (bfgs)\")\n",
+    "ckpt_path = Path(\"out\") / f\"mc_full.p\"\n",
+    "ckpt_path.parent.mkdir(exist_ok=True, parents=True)\n",
+    "pickle.dump(ckpt, open(ckpt_path, \"wb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_adam = pd.DataFrame(fit_adam.T, columns=[str(l) for l in train_lens])\n",
+    "# df_adam = df_adam.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "# df_adam.insert(0, \"model\", \"full (adam)\")\n",
     "\n",
-    "df_all = pd.concat((df_adam, df_bfgs), ignore_index=True)\n",
-    "df_all.to_pickle(Path(\"out\") / \"df_mc_full.pkl\")\n",
+    "# df_bfgs = pd.DataFrame(fit_bfgs.T, columns=[str(l) for l in train_lens])\n",
+    "# df_bfgs = df_bfgs.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "# df_bfgs.insert(0, \"model\", \"full (bfgs)\")\n",
     "\n",
-    "df_time = pd.DataFrame({\"length\": train_lens, \"time_adam\": train_time_adam, \"time\": train_time})\n",
-    "df_time.to_pickle(Path(\"out\") / \"df_mc_full_time.pkl\")"
+    "# df_all = pd.concat((df_adam, df_bfgs), ignore_index=True)\n",
+    "# df_all.to_pickle(Path(\"out\") / \"df_mc_full.pkl\")\n",
+    "\n",
+    "# df_time = pd.DataFrame({\"length\": train_lens, \"time_adam\": train_time_adam, \"time\": train_time})\n",
+    "# df_time.to_pickle(Path(\"out\") / \"df_mc_full_time.pkl\")"
    ]
   }
  ],
