--- a/train_reduced_mc.ipynb
+++ b/train_reduced_mc.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from functools import partial\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
@@ -53,7 +54,6 @@
     "ckpt_path = Path(\"out\") / f\"hypernet.p\"\n",
     "ckpt = pickle.load(open(ckpt_path, \"rb\"))\n",
     "\n",
-    "LOSS = ckpt[\"LOSS\"]\n",
     "cfg = ckpt[\"cfg\"]\n",
     "params_enc, params_proj, params_ss = ckpt[\"params\"]\n",
     "scalers = ckpt[\"scalers\"]\n",
@@ -148,7 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_red = onp.empty((len(train_lens), mc_size))"
+    "fit_red = onp.empty((len(train_lens), mc_size))\n",
+    "train_time = onp.empty(len(train_lens))"
    ]
   },
   {
@@ -163,6 +164,7 @@
     "\n",
     "    print(f\"Processing length {train_len}...\")\n",
     "    \n",
+    "    time_start = time.time()\n",
     "    # generate mc sequences\n",
     "    key, subkey = jr.split(key)     \n",
     "    start_indexes = jr.randint(subkey, shape=(mc_size,),  minval=0, maxval=N-train_len)\n",
@@ -180,6 +182,8 @@
     "    params_ss_proj = jax.vmap(proj.apply, in_axes=(None, 0))(params_proj, opt_vars_red[\"z\"])\n",
     "    params_red = jax.tree.map(lambda x, y: x+y, params_ss, params_ss_proj)\n",
     "\n",
+    "    train_time[len_idx] = time.time() - time_start\n",
+    "    \n",
     "    # test reduced models\n",
     "    x0 = jnp.zeros((cfg.nx, ))\n",
     "    y_test_hat = jax.vmap(ss_apply, in_axes=(0, None, None, None))(params_red, scalers, x0, u_test)\n",
@@ -194,11 +198,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = pd.DataFrame(fit_red.T, columns=[str(l) for l in train_lens])\n",
-    "df_all = df_all.melt(var_name=\"length\", value_name=\"fit\")\n",
-    "df_all.insert(0, \"model\", \"reduced (hypernet)\")\n",
+    "# Save the final checkpoint\n",
+    "ckpt = {\n",
+    "    \"train_lens\": train_lens,\n",
+    "    \"train_time\": train_time,\n",
+    "    \"fit\": fit_red,\n",
+    "}\n",
     "\n",
-    "df_all.to_pickle(Path(\"out\") / \"df_mc_hypernet.pkl\")"
+    "ckpt_path = Path(\"out\") / f\"mc_red.p\"\n",
+    "ckpt_path.parent.mkdir(exist_ok=True, parents=True)\n",
+    "pickle.dump(ckpt, open(ckpt_path, \"wb\" ))"
    ]
   }
  ],
