Refactor variable names for clarity and update README with new training notebook

--- a/analyze_mc.ipynb
+++ b/analyze_mc.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,13 +20,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_mc = pd.read_pickle(Path(\"out\") / \"df_mc_adam_bfgs.pkl\")\n",
-    "#df_mc = pd.read_pickle(Path(\"out\") / \"df_mc_adam_bfgs_above_1000.pkl\")\n",
-    "df_full = pd.read_pickle(Path(\"out\") / \"df_mc_full.pkl\")\n",
-    "df_red = pd.read_pickle(Path(\"out\") / \"df_mc_hypernet.pkl\")\n",
-    "df_mc = pd.concat((df_full, df_red), ignore_index=True)\n",
+    "out = Path(\"out\")\n",
     "\n",
-    "df_full_time = pd.read_pickle(Path(\"out\") / \"df_mc_full_time.pkl\")"
+    "ckpt_red = pickle.load(open(out / \"mc_red.p\", \"rb\"))\n",
+    "df_red = pd.DataFrame(ckpt_red[\"fit\"].T, columns=[str(l) for l in ckpt_red[\"train_lens\"]])\n",
+    "df_red = df_red.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_red.insert(0, \"model\", \"reduced\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = Path(\"out\")\n",
+    "\n",
+    "ckpt_full = pickle.load(open(out / \"mc_full.p\", \"rb\"))\n",
+    "#fit_best = np.copy(ckpt_full[\"fit_bfgs\"])\n",
+    "#mask = (ckpt_full[\"fit_adam_tr\"] > ckpt_full[\"fit_bfgs_tr\"]) | (np.isnan(ckpt_full[\"fit_bfgs_tr\"]))\n",
+    "#fit_best[mask] = ckpt_full[\"fit_adam\"][mask]\n",
+    "\n",
+    "df_full = pd.DataFrame(ckpt_full[\"fit_bfgs\"].T, columns=[str(l) for l in ckpt_full[\"train_lens\"]])\n",
+    "df_full = df_full.melt(var_name=\"length\", value_name=\"fit\")\n",
+    "df_full.insert(0, \"model\", \"full\")\n",
+    "#df_full.dropna(inplace=True)\n",
+    "#df_full.drop(df_full[df_full.fit < 0].index, inplace=True)\n",
+    "\n",
+    "\n",
+    "df_mc = pd.concat((df_full, df_red), ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fit_best[mask], \n",
+    "#ckpt_full[\"fit_bfgs\"][mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ckpt_full[\"fit_adam\"][mask]"
    ]
   },
   {
@@ -46,14 +88,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mc[\"length\"] = df_mc[\"length\"].astype(int)\n",
     "df_mc[\"fit\"] = np.maximum(df_mc[\"fit\"], 0.0)\n",
     "\n",
-    "df_mc[\"rmse\"] = (1 - df_mc[\"fit\"]/100.0) * rms_y\n",
-    "#df_mc = df_mc[df_mc.length < 2500]\n",
-    "df_mc = df_mc[df_mc.model != \"full (adam)\"]\n",
-    "#df_mc = df_mc[df_mc.model != \"full\"]\n",
-    "df_mc[\"model\"] = df_mc[\"model\"].str.replace(\"full (bfgs)\", \"full\")"
+    "df_mc[\"rmse\"] = (1 - df_mc[\"fit\"]/100.0) * rms_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tmp = df_mc[df_mc[\"fit\"] < 1].groupby([\"model\", \"length\"]).fit.count()\n",
+    "#tmp[\"full (bfgs)\"]"
    ]
   },
   {
@@ -63,8 +110,8 @@
    "outputs": [],
    "source": [
     "model_labels = {\n",
-    "    \"full\": \"full parameterization\",\n",
-    "    \"reduced\": \"reduced parameterization\",\n",
+    "#    \"full\": \"full parameterization\",\n",
+    "#    \"reduced\": \"reduced parameterization\",\n",
     "    # Add more mappings as needed\n",
     "}\n",
     "model_order = [\"full\", \"reduced\"]\n",
@@ -75,13 +122,23 @@
     "plt.xticks(rotation=45)\n",
     "ax.set_xlabel(\"Training sequence length (-)\")\n",
     "ax.set_ylabel(\"Test FIT (%)\")\n",
-    "ax.axhline(y=fit_lin, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"linear baseline\")\n",
+    "ax.axhline(y=fit_lin, color=\"black\", linestyle=\"dotted\", alpha=0.5, label=\"LTI 40960 samples\")#, linewidth=0.5)\n",
+    "ax.axhline(y=98.8, color=\"black\", linestyle=\"dashed\", alpha=0.5, label=\"Full-order 40960 samples\")#, linewidth=0.5)\n",
     "#plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0)\n",
     "plt.legend(loc='lower right')#, borderaxespad=0)\n",
     "plt.ylim([-5, 100])\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(Path(\"fig\")/\"boxplot.pdf\")\n",
+    "plt.savefig(Path(\"fig\")/\"boxplot.pdf\")\n",
     "#plt.savefig(Path(\"fig\")/\"boxplot.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_full.keys()"
    ]
   },
   {
@@ -92,34 +149,13 @@
    "source": [
     "plt.figure()\n",
     "plt.title(\"Training time (hours)\")\n",
-    "plt.plot(df_full_time.length, df_full_time.time/60/24, \"*\", label=\"full (adam + BFGS)\")\n",
+    "plt.plot(ckpt_full['train_lens'], ckpt_full['train_time']/60/24, \"*\", label=\"full (adam + BFGS)\")\n",
+    "plt.plot(ckpt_red['train_lens'], ckpt_red['train_time']/60/24, \"*\", label=\"reduced\")\n",
+    "\n",
     "#plt.plot(df_full_time.length, df_full_time.time_adam/60/24, \"*\", label=\"full (adam)\")\n",
     "plt.xlabel(\"Training sequence length (-)\")\n",
     "plt.ylabel(\"Time (hours)\")\n",
     "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_stats = df_mc.groupby([\"model\", \"length\"]).agg([\"mean\", \"median\", \"std\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "#plt.plot(df_stats.loc[\"full\"][\"fit\"][\"mean\"])\n",
-    "plt.fill_between(df_stats.loc[\"full\"][\"fit\"][\"mean\"].index, df_stats.loc[\"full\"][\"fit\"][\"mean\"] - df_stats.loc[\"full\"][\"fit\"][\"std\"], df_stats.loc[\"full\"][\"fit\"][\"mean\"] + df_stats.loc[\"full\"][\"fit\"][\"std\"], alpha=0.3)\n",
-    "plt.fill_between(df_stats.loc[\"reduced\"][\"fit\"][\"mean\"].index, df_stats.loc[\"reduced\"][\"fit\"][\"mean\"] - df_stats.loc[\"reduced\"][\"fit\"][\"std\"], df_stats.loc[\"reduced\"][\"fit\"][\"mean\"] + df_stats.loc[\"reduced\"][\"fit\"][\"std\"], alpha=0.3)\n",
-    "\n",
-    "#plt.plot(df_stats.loc[\"reduced\"][\"fit\"][\"mean\"])"
    ]
   }
  ],
