--- a/train_full_alldata.ipynb
+++ b/train_full_alldata.ipynb
@@ -108,11 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u1 = data[\"u\"].reshape(-1, 1)\n",
-    "y1 = data[\"y\"].reshape(-1, 1)\n",
+    "u_train = data[\"u\"].reshape(-1, 1)\n",
+    "y_train = data[\"y\"].reshape(-1, 1)\n",
     "\n",
-    "u1 = u1 / 50.0\n",
-    "y1 = y1 / 7e-4"
+    "u_train = u_train / 50.0\n",
+    "y_train = y_train / 7e-4"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(y1)"
+    "plt.plot(y_train)"
    ]
   },
   {
@@ -131,11 +131,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u2 = scipy.io.loadmat(data_folder / \"uval_multisine.mat\")[\"uval_multisine\"].reshape(-1, 1)\n",
-    "y2 = scipy.io.loadmat(data_folder / \"yval_multisine.mat\")[\"yval_multisine\"].reshape(-1, 1)\n",
+    "u_test = scipy.io.loadmat(data_folder / \"uval_multisine.mat\")[\"uval_multisine\"].reshape(-1, 1)\n",
+    "y_test = scipy.io.loadmat(data_folder / \"yval_multisine.mat\")[\"yval_multisine\"].reshape(-1, 1)\n",
     "\n",
-    "u2 = u2 / 50.0\n",
-    "y2 = y2 / 7e-4"
+    "u_test = u_test / 50.0\n",
+    "y_test = y_test / 7e-4"
    ]
   },
   {
@@ -155,19 +155,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = ss_apply(opt_vars_init[\"params\"], scalers, opt_vars_init[\"x0\"], u1)\n",
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def loss_full(ov, y, u):\n",
     "       \n",
-    "    y_hat = ss_apply(ov[\"params\"], scalers, ov[\"x0\"], u1)\n",
+    "    y_hat = ss_apply(ov[\"params\"], scalers, ov[\"x0\"], u)\n",
     "    #scaled_err = (y1 - y1_hat) / ckpt[\"sigma_noise\"]\n",
     "    #loss = jnp.sum(scaled_err**2) + jnp.sum(ov[\"z\"]**2)\n",
     "    loss = jnp.mean((y - y_hat)**2)\n",
@@ -210,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_vars_adam, losses_adam = train_full_model(opt_vars_init, y=y1.astype(dtype_adam), u=u1.astype(dtype_adam), iters=40_000, lr=1e-3)\n",
+    "opt_vars_adam, losses_adam = train_full_model(opt_vars_init, y=y_train.astype(dtype_adam), u=u_train.astype(dtype_adam), iters=40_000, lr=1e-3)\n",
     "tima_adam = time.time() - time_start\n",
     "print(f\"Adam took {tima_adam:.2f} seconds\")"
    ]
@@ -223,7 +213,7 @@
    "source": [
     "options = {\"disp\": True, \"return_all\": True} #, 'iprint': 1}\n",
     "\n",
-    "loss_bfgs = partial(loss_full, y=y1.astype(dtype_bfgs), u=u1.astype(dtype_bfgs))\n",
+    "loss_bfgs = partial(loss_full, y=y_train.astype(dtype_bfgs), u=u_train.astype(dtype_bfgs))\n",
     "solver = jaxopt.ScipyMinimize(\n",
     "    fun=loss_bfgs, tol=1e-6, method=\"BFGS\", maxiter=10_000, options=options)\n",
     "\n",
@@ -248,12 +238,12 @@
    "source": [
     "# Use in the decoder both to define x0 and the model parameters\n",
     "x0 = jnp.zeros((cfg.nx, ))\n",
-    "y2_hat = ss_apply(opt_vars_bfgs[\"params\"], scalers, x0, u2)\n",
+    "y2_hat = ss_apply(opt_vars_bfgs[\"params\"], scalers, x0, u_test)\n",
     "#y2_hat = ss_apply(opt_vars_adam[\"params\"], scalers, x0, u2)\n",
     "plt.figure()\n",
-    "plt.plot(y2, \"k\", label=\"true\")\n",
+    "plt.plot(y_test, \"k\", label=\"true\")\n",
     "plt.plot(y2_hat, \"b\", label=\"reconstructed\")\n",
-    "plt.plot(y2 - y2_hat, \"r\", label=\"reconstruction error\")\n",
+    "plt.plot(y_test - y2_hat, \"r\", label=\"reconstruction error\")\n",
     "plt.axvline(cfg.skip_loss, color=\"k\")\n",
     "plt.ylim([-4, 4]);"
    ]
@@ -264,8 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])\n",
-    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y2[cfg.skip_loss:], y2_hat[cfg.skip_loss:])*7e-4 * 1e5\n",
+    "fit_full = nonlinear_benchmarks.error_metrics.fit_index(y_test[cfg.skip_loss:], y2_hat[cfg.skip_loss:])\n",
+    "rmse_full = nonlinear_benchmarks.error_metrics.RMSE(y_test[cfg.skip_loss:], y2_hat[cfg.skip_loss:])*7e-4 * 1e5\n",
     "fit_full, rmse_full # (Array([98.54584449], dtype=float64), array([0.96720211]))\n",
     "print(f\"Fit index: {fit_full[0]:.2f} %\")\n",
     "print(f\"RMSE: {rmse_full[0]:.2f}e-5\")"
@@ -278,12 +268,12 @@
    "outputs": [],
    "source": [
     "# Use in the decoder both to define x0 and the model parameters\n",
-    "y1_hat = ss_apply(opt_vars_bfgs[\"params\"], scalers, opt_vars_bfgs[\"x0\"], u1)\n",
+    "y1_hat = ss_apply(opt_vars_bfgs[\"params\"], scalers, opt_vars_bfgs[\"x0\"], u_train)\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(y1, \"k\", label=\"true\")\n",
+    "plt.plot(y_train, \"k\", label=\"true\")\n",
     "plt.plot(y1_hat, \"b\", label=\"reconstructed\")\n",
-    "plt.plot(y1 - y1_hat, \"r\", label=\"reconstruction error\");"
+    "plt.plot(y_train - y1_hat, \"r\", label=\"reconstruction error\");"
    ]
   },
   {
