--- a/train_full_mc.ipynb
+++ b/train_full_mc.ipynb
@@ -233,7 +233,9 @@
     "    \"train_time_adam\": train_time_adam,\n",
     "    \"train_time\": train_time,\n",
     "    \"fit_adam\": fit_adam,\n",
+    "    \"fit_adam_tr\": fit_adam_tr,\n",
     "    \"fit_bfgs\": fit_bfgs,\n",
+    "    \"fit_bfgs_tr\": fit_bfgs_tr,\n",
     "}\n",
     "\n",
     "ckpt_path = Path(\"out\") / f\"mc_full.p\"\n",
